@@ -43,6 +43,9 @@
 # Apply changes to balance/unspent.txt after each send
 #apply2bal=false
 
+# Make sure R and S inside ECDSA signatures are only 32 bytes long (keep signing until OK)
+#minsig=true
+
 # Path to the file with the password seed
 # Default: .secret
 #secret=/usr/local/.secret
